--- a/_config.yml
+++ b/_config.yml
@@ -14,18 +14,18 @@
 #theme: jekyll-agency
 remote_theme: raviriley/agency-jekyll-theme
 
-url    : "" # the base hostname & protocol for your site, e.g. http://example.com
+url    : "https://mariekucerova.me" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/agency-jekyll-theme-starter" # the subpath of your site, e.g. /blog
 
-title      : Marie Kucerova language service
-email      : isitasi@example.com #this is also the email contact forms will go to
+title      : Marie Kucerova Jazykova Skola
+email      : ivan.satsiuk@seznam.cz #this is also the email contact forms will go to
 description: "Language learning services provider in Czech republic"
 author     : M. Kucerova
 # logo:     #optional, defaults to site title
   # path: assets\img\clients\creative-market.jpg
   # height: 60 #height in px, defaults to 52px
 
-locale: "en-US" # See available languages in _data/sitetext.yml
+locale: "en" # See available languages in _data/sitetext.yml
 
 analytics:
   google: #Google Analytics tracking code here
