--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -67,7 +67,12 @@ en: &DEFAULT_EN
   team:
     title: "O MNĚ"
     text: "Naučím vás česky přesně to, co potřebujete."
-    subtext: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported.
+    subtext: Jmenuji se Marie Kučerová a vyučuji češtinu jako cizí jazyk, mluvím plynně rusky a rozumím ukrajinsky. Zaměřuji se na individuální lekce se studenty všech věkových kategorií, kteří umí ukrajinsky nebo rusky.  Moji studenti si sami mohou určit tempo a probíranou látku dle vlastních potřeb. <br> 
+<br>Miluji příběhy všeho druhu, pohádky, legendy, literaturu, historii, příběhy zajímavých lidí a míst. Proto jsem vystudovala sociologii a žurnalistiku na Karlově Univerzitě. Během studií i po nich jsem jako dobrovolník pracovala na západní Ukrajině. V ruském Kirově jsem strávila jeden školní rok, kde jsem učila v místním lyceu angličtinu a češtinu.
+<br>Rusky jsem se začala učit na vysoké škole a během svých cest jsem měla možnost tuto znalost prohloubit. Porozumět ukrajinštině mně později naučil můj muž a jeho rodina.  
+<br>Výuce češtiny se věnuji od roku 2020. Svou vášeň pro příběhy promítám i do svých lekcí. Moje nejoblíbenější lekce jsou ty s přesahem, kde se věnujeme zajímavým místům Česka, legendám nebo slavným Češkám a Čechům. Studenti se tak učí nejen gramatiku a nová slovíčka, ale odnášejí si z hodin i něco z českého kulturního povědomí. 
+<br>
+Zajímá vás, jak mé lekce probíhají? V kontaktním formuláři níže si můžete objednat první lekci zdarma!
     section: team
     people:
       - name: "Marie Kučerová"
